# OpenGL-practice

./: CMakeLists.txt  README.md  data.txt  main.cxx
dependencies/: CMakeLists.txt
resources/shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  buffer.cxx  buffer.h  callbacks.cxx  callbacks.h  file.cxx  file.h  input.cxx  input.h  point.cxx  point.h  renderer.cxx  renderer.h  shader.cxx  shader.h  texture.cxx  texture.h  vao.cxx  vao.h
src/resources/shaders/: fragment.glsl  vertex.glsl
